[gd_scene load_steps=31 format=3 uid="uid://bvfc1tl8ttpuo"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_amiw1"]
[ext_resource type="PackedScene" uid="uid://bfhkdj8w2yaqr" path="res://scenes/parallax_background.tscn" id="2_pabcw"]
[ext_resource type="Texture2D" uid="uid://csxqdwmhhass" path="res://sprites/background/mountains_back_2.png" id="3_ph54t"]
[ext_resource type="Texture2D" uid="uid://cxl0u15q5c5u7" path="res://sprites/background/mid.png" id="4_ekxhh"]
[ext_resource type="PackedScene" uid="uid://eu78pwwdfttt" path="res://scenes/spawners.tscn" id="5_b7kqf"]
[ext_resource type="PackedScene" uid="uid://dc4pbamcmsruq" path="res://scenes/obstacles/mountain_a.tscn" id="6_rdnpa"]
[ext_resource type="PackedScene" uid="uid://cd42djg346oqy" path="res://scenes/eagle.tscn" id="7_w8ddd"]
[ext_resource type="PackedScene" uid="uid://cet764a7faoqm" path="res://scenes/wind_particles.tscn" id="8_1karo"]
[ext_resource type="Texture2D" uid="uid://bq584cyumqstu" path="res://particles/wind_particle_3.png" id="9_p0bp2"]
[ext_resource type="Material" uid="uid://bmc1yhctwob0n" path="res://shaders/color_palette.tres" id="10_7dtjx"]
[ext_resource type="PackedScene" uid="uid://fpw1yur0sw3c" path="res://scenes/ui/ui_nest_counter.tscn" id="11_td1cr"]
[ext_resource type="PackedScene" uid="uid://c13a6t4dwe07s" path="res://scenes/ui/ui_message.tscn" id="11_w3rko"]
[ext_resource type="Script" path="res://scripts/ui/ui_palette.gd" id="12_3ekbw"]
[ext_resource type="PackedScene" uid="uid://gdoloxvu6nf3" path="res://scenes/ui/energy_morale_ui.tscn" id="12_rye0r"]
[ext_resource type="PackedScene" uid="uid://cmby6d2loyox6" path="res://scenes/ui/ui_instant_text_feedback.tscn" id="13_2vptr"]
[ext_resource type="FontFile" uid="uid://kcdyir8efr7o" path="res://fonts/Bangers-Regular.ttf" id="14_k8s70"]
[ext_resource type="Script" path="res://scripts/ui/ui_debug_stages.gd" id="15_l4c53"]
[ext_resource type="Script" path="res://scripts/sound_wind_mixer.gd" id="17_xaldk"]
[ext_resource type="AudioStream" uid="uid://sfagc5liqm30" path="res://sounds/wind/wind_woosh_loop.ogg" id="18_72rxq"]
[ext_resource type="AudioStream" uid="uid://06s15ka1es4v" path="res://sounds/wind/additional_wind.wav" id="19_pia2j"]
[ext_resource type="Script" path="res://scripts/systems/balance_provider.gd" id="20_bal"]
[ext_resource type="Resource" uid="uid://b7lnhfb78obud" path="res://configs/energy/energy_config_default.tres" id="22_ecfg"]
[ext_resource type="PackedScene" uid="uid://byvhfmkh0uj1d" path="res://scenes/ui/ui_tutorial_overlay.tscn" id="23_tutor"]
[ext_resource type="Texture2D" uid="uid://bc8mpkr5psodf" path="res://sprites/ui/keys_movement_2.png" id="24_keys_move"]
[ext_resource type="Texture2D" uid="uid://bf5y3dl66rclc" path="res://sprites/ui/keys_fish_2.png" id="25_keys_fish"]
[ext_resource type="AudioStream" uid="uid://b534hgmgqka4o" path="res://sounds/music/shattered_pixels.mp3" id="25_w17wi"]
[ext_resource type="PackedScene" uid="uid://dr3nks8eycs8m" path="res://scenes/ui/ui_offscreen_nest_indicator.tscn" id="26_nest_indicator"]

[sub_resource type="Resource" id="Resource_2vmig"]
script = ExtResource("12_3ekbw")
Yellow1 = Color(0.458824, 0.372549, 0.152941, 1)
Yellow2 = Color(0.772549, 0.615686, 0.223529, 1)
Yellow3 = Color(0.909804, 0.72549, 0.258824, 1)
Red2 = Color(0.8, 0.282353, 0.282353, 1)
Red3 = Color(0.956863, 0.32549, 0.32549, 1)
Purple1 = Color(0.219608, 0.14902, 0.243137, 1)
Black = Color(0.070588, 0.058824, 0.086275, 1)
White = Color(0.890196, 0.866667, 0.909804, 1)

[sub_resource type="Resource" id="Resource_bvd22"]
script = ExtResource("12_3ekbw")
Yellow1 = Color(0.458824, 0.372549, 0.152941, 1)
Yellow2 = Color(0.772549, 0.615686, 0.223529, 1)
Yellow3 = Color(0.909804, 0.72549, 0.258824, 1)
Red2 = Color(0.8, 0.282353, 0.282353, 1)
Red3 = Color(0.956863, 0.32549, 0.32549, 1)
Purple1 = Color(0.219608, 0.14902, 0.243137, 1)
Black = Color(0.070588, 0.058824, 0.086275, 1)
White = Color(0.890196, 0.866667, 0.909804, 1)

[sub_resource type="Resource" id="Resource_edrd6"]
script = ExtResource("12_3ekbw")
Yellow1 = Color(0.458824, 0.372549, 0.152941, 1)
Yellow2 = Color(0.772549, 0.615686, 0.223529, 1)
Yellow3 = Color(0.909804, 0.72549, 0.258824, 1)
Red2 = Color(0.8, 0.282353, 0.282353, 1)
Red3 = Color(0.956863, 0.32549, 0.32549, 1)
Purple1 = Color(0.219608, 0.14902, 0.243137, 1)
Black = Color(0.070588, 0.058824, 0.086275, 1)
White = Color(0.890196, 0.866667, 0.909804, 1)

[node name="Game" type="Node" groups=["game_area"]]
script = ExtResource("1_amiw1")
obstacle_spawner_path = NodePath("Spawners/ObstacleSpawner")
parallax_background_path = NodePath("ParallaxBackground")
eagle_path = NodePath("Eagle")
nest_spawner_path = NodePath("Spawners/NestSpawner")
fish_spawner_path = NodePath("Spawners/FishSpawner")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_pabcw")]
enable_middle_layer = false
middle_vertical_offset = 200.0
gradient_bottom_color = Color(0.505882, 0.345098, 0.407843, 1)
mountain_textures = Array[Texture2D]([ExtResource("3_ph54t")])
middle_textures = Array[Texture2D]([ExtResource("4_ekxhh")])

[node name="Spawners" parent="." instance=ExtResource("5_b7kqf")]

[node name="FishSpawner" parent="Spawners" index="0" node_paths=PackedStringArray("eagle_reference")]
eagle_reference = NodePath("../../Eagle")

[node name="ObstacleSpawner" parent="Spawners" index="1"]
mountain_scenes = Array[PackedScene]([ExtResource("6_rdnpa")])

[node name="NestSpawner" parent="Spawners" index="2" node_paths=PackedStringArray("eagle_reference")]
eagle_reference = NodePath("../../Eagle")

[node name="Eagle" parent="." instance=ExtResource("7_w8ddd")]
position = Vector2(667, 395)
balance_provider_path = NodePath("../BalanceProvider")
energy_loss_per_flap = 1.0
disable_passive_energy_loss = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="WindParticles" parent="." instance=ExtResource("8_1karo")]
z_index = -1
position = Vector2(2101, 552)
amount = 20
speed_scale = 4.0
lifetime_randomness = 0.0
draw_order = 1
texture = ExtResource("9_p0bp2")
spread = 0.0
initial_velocity_min = 100.0
initial_velocity_max = 120.0
angular_velocity_min = 0.0
angular_velocity_max = 0.0
linear_accel_min = 0.0
linear_accel_max = 3.0
tangential_accel_min = 0.0
tangential_accel_max = 0.0
damping_min = 0.0
damping_max = 5.0
angle_max = 0.0
scale_amount_min = 1.0
color = Color(1, 0.996078, 0.996078, 0.231373)
hue_variation_min = -0.72
hue_variation_max = 0.11

[node name="FinalShader" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="PaletteColorRect" type="ColorRect" parent="FinalShader"]
visible = false
material = ExtResource("10_7dtjx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="UiNestCounter" parent="CanvasLayer" instance=ExtResource("11_td1cr")]
offset_left = 32.0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 32.0

[node name="UIEnergyBar" parent="CanvasLayer" instance=ExtResource("12_rye0r")]
palette = SubResource("Resource_2vmig")

[node name="UIInstantTextFeedback" parent="CanvasLayer" instance=ExtResource("13_2vptr")]

[node name="StageHUD" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 973.0
offset_right = 250.0
offset_bottom = 1003.0
theme_override_colors/font_color = Color(0.890196, 0.866667, 0.909804, 1)
theme_override_fonts/font = ExtResource("14_k8s70")
theme_override_font_sizes/font_size = 22
text = "Stage 1: Introduction"
script = ExtResource("15_l4c53")
palette = SubResource("Resource_bvd22")

[node name="UIMessage" parent="CanvasLayer" instance=ExtResource("11_w3rko")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
nest_spawner_path = NodePath("../../Spawners/NestSpawner")
eagle_path = NodePath("../../Eagle")
camera_path = NodePath("../../Camera2D")
palette = SubResource("Resource_edrd6")

[node name="UITutorialOverlay" parent="CanvasLayer" instance=ExtResource("23_tutor")]
tutorial_image_path = NodePath("TutorialImage")
stage_to_texture = {
1: ExtResource("24_keys_move"),
2: ExtResource("25_keys_fish")
}
stage_to_duration = {
1: 5.0,
2: 4.0
}
stage_to_delay = {
1: 3,
2: 6
}

[node name="UIOffscreenNestIndicator" parent="CanvasLayer" instance=ExtResource("26_nest_indicator")]
camera_path = NodePath("../../Camera2D")
nest_spawner_path = NodePath("../../Spawners/NestSpawner")
palette_resource = SubResource("Resource_edrd6")

[node name="EmbientSound" type="Node2D" parent="."]
script = ExtResource("17_xaldk")

[node name="BaseWind" type="AudioStreamPlayer2D" parent="EmbientSound"]
stream = ExtResource("18_72rxq")
volume_db = -15.0

[node name="AdditionalWind" type="AudioStreamPlayer2D" parent="EmbientSound"]
stream = ExtResource("19_pia2j")
volume_db = -18.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="EmbientSound"]
stream = ExtResource("25_w17wi")
volume_db = -32.0
autoplay = true

[node name="BalanceProvider" type="Node" parent="."]
script = ExtResource("20_bal")
energy_config = ExtResource("22_ecfg")

[editable path="Spawners"]
